--- a/index_v4.html
+++ b/index_v4.html
@@ -26,6 +26,28 @@
 
 
     <style>
+        /* width */
+        ::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        /* Track */
+        ::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px grey;
+            border-radius: 10px;
+        }
+
+        /* Handle */
+        ::-webkit-scrollbar-thumb {
+            background: rgb(126, 125, 125);
+            border-radius: 10px;
+        }
+
+        /* Handle on hover */
+        ::-webkit-scrollbar-thumb:hover {
+            background: #a1a1a1;
+        }
+
         .mapboxgl-ctrl-top-center {
             top: 0;
             left: 50%;
@@ -334,6 +356,10 @@
         #farm-features-list-items {
             display: flex;
             flex-direction: column;
+
+            max-height: 400px;
+            overflow-y: auto;
+
         }
 
         #modal-container {
