--- a/index_v6.html
+++ b/index_v6.html
@@ -1662,6 +1662,9 @@
 
         function loadPropertyControls() {
 
+            const saveButton = createSaveButton();
+            propertyControlsDiv.appendChild(saveButton);
+
             const closeButton = document.createElement("div");
             closeButton.innerText = "Close";
             closeButton.className = "save-close-button";
@@ -1790,8 +1793,12 @@
         farmFeaturesListMenuDiv.appendChild(div);
 
 
+        const saveContainer = document.createElement("div");
+        saveContainer.style.display = "flex";
+        saveContainer.style.justifyContent = "center";
         const saveButton = createSaveButton();
-        farmFeaturesListButtonsDiv.appendChild(saveButton);
+        saveContainer.appendChild(saveButton);
+        farmFeaturesListButtonsDiv.appendChild(saveContainer);
 
 
         createFarmFeaturesList();
@@ -1805,18 +1812,7 @@
                 farmFeaturesListItemsDiv.appendChild(createItem(item));
             });
 
-            const saveContainer = document.createElement("div");
-            saveContainer.style.display = "flex";
-            saveContainer.style.justifyContent = "center";
-            saveContainer.style.marginTop = "10px";
-            // saveContainer.style.position = "absolute";
-            // saveContainer.style.bottom = "0";
-            // saveContainer.style.left = "50%"
-            // saveContainer.style.transform = "translateX(-50%)"
 
-            const saveButton = createSaveButton();
-            saveContainer.appendChild(saveButton);
-            farmFeaturesListItemsDiv.appendChild(saveContainer);
 
             function createItem(item) {
                 const container = document.createElement("div");
