--- a/index_v7.html
+++ b/index_v7.html
@@ -1003,14 +1003,15 @@
 
             map.addSource("base", {
                 type: "vector",
-                url: "mapbox://ourfarms.b895136s",
+                url: "mapbox://ourfarms.7lvygcwm",
+                //url: "mapbox://ourfarms.b895136s",
             });
             map.addLayer({
                 id: "base-data",
                 type: "fill",
                 source: "base",
                 visibility: "visible",
-                "source-layer": "nzpropertytitles",
+                "source-layer": "sfiltered",
                 layout: {},
                 paint: {
                     "fill-color": "gray",
@@ -1022,7 +1023,7 @@
                 type: "line",
                 source: "base",
                 visibility: "visible",
-                "source-layer": "nzpropertytitles",
+                "source-layer": "sfiltered",
                 layout: {},
                 paint: {
                     "line-color": "black",
